<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@color/colorPrimary"
    android:keepScreenOn="true"
    tools:context=".ScoreActivity">

    <TextView
        android:id="@+id/txtScore"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:text="@string/your_score"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="30sp"
        android:textStyle="bold"

        />

    <TextView
        android:id="@+id/txtScoreMess"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtScore"
        android:layout_marginTop="30dp"
        android:gravity="center"
        android:text=""
        android:textColor="@color/red"
        android:textSize="25sp"
        android:textStyle="bold"

        />

    <Button
        android:id="@+id/btGoBack"
        android:layout_width="200dp"
        android:layout_height="55dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="60dp"
        android:background="#16a085"
        android:text="@string/go_back"
        android:textColor="#fff"
        android:textSize="20sp"
        android:layout_above="@+id/btTryAgain"
        android:textStyle="bold" />
    <Button
        android:id="@+id/btTryAgain"
        android:layout_width="200dp"
        android:layout_height="55dp"

        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/try_one_more"
        android:background="#16a085"
        android:textColor="#fff"
        android:textSize="20sp"
        android:textStyle="bold"/>

</RelativeLayout>